--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,5 @@
+/* Main Styling */
+
 .roboto-roboto {
   font-family: "Roboto", serif;
   font-optical-sizing: auto;
@@ -25,6 +27,8 @@ body {
   grid-gap: 0px;
   width: 100%;
 }
+
+/* Profile SideBar Styling */
 
 #profile-container {
   grid-area: profile;
@@ -150,11 +154,15 @@ a:hover {
   margin: 5px;
 }
 
+/* Navbar Styling */
+
 #nav-container {
   grid-area: navbar;
   background: green;
   max-height: 10vh;
 }
+
+/* Main Content */
 
 #main-content {
   grid-area: main;
@@ -209,11 +217,17 @@ a:hover {
   margin-right: 5px;
 }
 
+
+/* Form Styling */
+
 #form-container {
   grid-area: form;
   background: black;
   margin: auto 10px;
 }
+
+
+/* Footer Styling  */
 
 #footer-container {
   grid-area: footer;
