--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -291,23 +291,34 @@ font-weight: lighter;
 
 /*main content for projects flex*/
 #pro-search-el {
-
-
+  margin-top: 20px;
+  color: white;
+  background-color: black;
+  border-radius: 10px;
+  display: block;
+  border: 1px solid rgb(39, 39, 39);
+  width: 100%;
+  margin-bottom: 20px;
+  height: 30px;
+  padding-left: 2px;
 }
 #pro-view-el {
-
-
+  color: white;
+  border: 1px solid rgb(39, 39, 39);
+  display: flex;
+  flex-direction: column;
+  width: 850px;
 }
 #pro-tab-el {
 
-
 }
 #pro-item-el {
-
-
+  border: 1px solid rgb(39, 39, 39);
+  height: 100px;
+  padding: 5px 5px;
+  border-radius: 2px;
 }
 .pro-title-el {
-
 
 }
 .pro-desc-el {
@@ -338,9 +349,11 @@ color: white;
 }
 #form-entry-name-el {
   color: white;
-  background-color: rgb(39, 39, 39);
-  border-radius: 25px;
-
+  background-color: black;
+  border-radius: 2px;
+  display: block;
+  border: 1px solid rgb(39, 39, 39);
+  width: 100%;
 }
 #form-pro-desc-el {
   color: white;
@@ -352,12 +365,15 @@ color: white;
 }
 #form-entry-desc-el {
   color: white;
-  background-color: rgb(39, 39, 39);
-  border-radius: 25px;
+  background-color: black;
+  border-radius: 2px;
+  display: block;
+  border: 1px solid rgb(39, 39, 39);
+  width: 100%;
+  height: 200px;
 }
 #submit-el {
-
-
+margin-top: 20px;
 }
 /**/
 
