--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -33,16 +33,17 @@ body {
 #profile-container {
   grid-area: profile;
   padding: 0;
-  margin: 0 20px;
 }
 
 .profile-div {
-  width: 260px;
-  margin: 0 auto;
-  padding-top: 20px;
+  width: 320px;
+  height: 100%;
+  margin-right: 20px;
+  padding: 40px 20px 20px 20px;
   color: white;
   font-family: "Roboto", sans-serif;
   text-align: center;
+  background: #222;
 }
 
 .profile-div img {
@@ -146,6 +147,7 @@ a:hover {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
+  width: 250px;
   margin-bottom: 40px;
 }
 
@@ -160,7 +162,8 @@ a:hover {
   grid-area: navbar;
   background: black;
   border: 2px solid #999;
-
+  width: 100%;
+  max-height: 10vh;
 }
 
 .navbar-nav {
@@ -179,6 +182,10 @@ a:hover {
   color: white;
 }
 
+.navbar-nav .nav-link.active {
+  color: #999;
+}
+
 .nav-link:hover {
   color: #999;
 }
@@ -188,41 +195,44 @@ a:hover {
 
 #main-content {
   grid-area: main;
+  width: 100%;
   background: black;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 20px;
+  margin: 20px auto;
 }
-
-.repo-card {
+  
+/* Pinned Repositories Styling */
+.pinned-repo-card {
   background: #222;
   color: white;
   width: 300px;
   padding: 20px;
-  margin: 10px;
   border-radius: 10px;
   text-align: center;
 }
 
-.repo-card-title {
+.pinned-repo-card-title {
   display: flex;
   align-items: center;
 }
 
-.repo-card-title h4 {
+.pinned-repo-card-title h4 {
   color: steelblue;
   font-size: 16px;
   margin: 0 10px;
 }
 
-.repo-description {
+.pinned-repo-description {
   padding: 10px;
   font-size: 14px;
   margin-top: 10px;
   min-height: 150px;
 }
 
-.repo-details {
+.pinned-repo-details {
   display: flex;
   align-items: start;
   justify-content: space-around;
@@ -239,6 +249,24 @@ a:hover {
   margin-right: 5px;
 }
 
+/* Regular Repositories Styling */
+#repo-search {
+  min-width: 400px;
+}
+
+#render-repo {
+  width: 100%;
+  margin-top: -30px;
+}
+
+.repo-card {
+  background: #222;
+  color: white;
+  padding: 20px;
+  margin: 10px 0 20px 0;
+  border-radius: 5px;
+}
+
 
 /* Form Styling */
 
@@ -253,6 +281,8 @@ a:hover {
 
 #footer-container {
   grid-area: footer;
+  margin: 20px 0 10px 0;
+  border: 2px solid #999;
 }
 
 /*start of broc's styling*/
@@ -286,7 +316,7 @@ font-weight: lighter;
 
 
 /*main content for projects flex*/
-#pro-search-el {
+/* #pro-search-el {
 
 
 }
@@ -309,7 +339,7 @@ font-weight: lighter;
 .pro-desc-el {
 
 
-}
+} */
 /**/
 
 
@@ -351,10 +381,10 @@ color: white;
   background-color: rgb(39, 39, 39);
   border-radius: 25px;
 }
-#submit-el {
+/* #submit-el {
 
 
-}
+} */
 /**/
 
 
