--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -222,7 +222,7 @@ a:hover {
 .pinned-repo-card-title h4 {
   color: steelblue;
   font-size: 16px;
-  margin: 0 10px;
+  margin: 10px;
 }
 
 .pinned-repo-description {
@@ -249,6 +249,12 @@ a:hover {
   margin-right: 5px;
 }
 
+.pinned-repo-details button {
+  margin-top: -10px;
+  margin-left: 5px;
+  color: red;
+}
+
 /* Regular Repositories Styling */
 #repo-search {
   min-width: 400px;
@@ -265,6 +271,15 @@ a:hover {
   padding: 20px;
   margin: 10px 0 20px 0;
   border-radius: 5px;
+}
+
+.repo-card-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.repo-card button {
+  color: red;
 }
 
 
