--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -334,15 +334,15 @@ font-weight: lighter;
 /*main content for projects flex*/
 #pro-search-el {
   margin-top: 20px;
-  color: white;
-  background-color: black;
-  border-radius: 10px;
+  color: black;
+  background-color: white;
+  border-radius: 5px;
   display: block;
   border: 1px solid rgb(39, 39, 39);
   width: 100%;
   margin-bottom: 20px;
-  height: 30px;
-  padding-left: 2px;
+  height: 40px;
+  padding-left: 10px;
 }
 
 #pro-view-el {
