--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -424,3 +424,26 @@ margin-top: 20px;
   font-size: 12px;
   color: #999;
 }
+
+
+@media only screen and (max-width: 600px) {
+  .container {
+    display: grid;
+    grid-template: 
+    "navbar"
+    "profile"
+    "main"
+    "form"
+    "footer";
+    background: black;
+    margin: 0 auto;
+    padding: 0;
+    grid-gap: 0px;
+    width: 100%;
+  }
+
+  .profile-div {
+    margin: 0 auto;
+  }
+
+}
